--- a/src/Presentation/Nop.Web/App_Data/appsettings.json
+++ b/src/Presentation/Nop.Web/App_Data/appsettings.json
@@ -7,7 +7,7 @@
   "HostingConfig": {
     "UseHttpClusterHttps": false,
     "UseHttpXForwardedProto": false,
-    "ForwardedHttpHeader": null
+    "ForwardedHttpHeader": ""
   },
   "RedisConfig": {
     "Enabled": false,
@@ -19,17 +19,17 @@
     "IgnoreTimeoutException": false
   },
   "AzureBlobConfig": {
-    "ConnectionString": null,
-    "ContainerName": null,
-    "EndPoint": null,
+    "ConnectionString": "",
+    "ContainerName": "",
+    "EndPoint": "",
     "AppendContainerName": true,
     "StoreDataProtectionKeys": false,
-    "DataProtectionKeysContainerName": null,
-    "DataProtectionKeysVaultId": null
+    "DataProtectionKeysContainerName": "",
+    "DataProtectionKeysVaultId": ""
   },
   "InstallationConfig": {
     "DisableSampleData": false,
-    "DisabledPlugins": null
+    "DisabledPlugins": ""
   },
   "PluginConfig": {
     "ClearPluginShadowDirectoryOnStartup": true,
